# repr_cast

./: ARCHITECTURE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: basic_usage.rs
src/: expand.rs  lib.rs  parse.rs  repr_enum.rs
tests/: basic_tests.rs  complex_discriminants.rs  ui_tests.rs
tests/ui/: README.md  enum_with_fields.rs  enum_with_fields.stderr  enum_with_named_fields.rs  enum_with_named_fields.stderr  mixed_variants.rs  mixed_variants.stderr  no_repr_type.rs  no_repr_type.stderr  not_an_enum.rs  not_an_enum.stderr  union_type.rs  union_type.stderr
